--- a/notebooks/DemoDownloadAndConvert.ipynb
+++ b/notebooks/DemoDownloadAndConvert.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -20,19 +20,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "\n",
     "from shapely.geometry import LineString"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,11 +38,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:file test_data/s_00699002_rgram.lbl yet exists not repeating\n",
+      "WARNING:root:file test_data/s_00699002_rgram.img yet exists not repeating\n",
+      "WARNING:root:file test_data/s_00699002_tiff.tif yet exists not repeating\n",
+      "WARNING:root:file test_data/s_00699002_tiff.lbl yet exists not repeating\n",
+      "WARNING:root:file test_data/s_00699002_thm.jpg yet exists not repeating\n",
+      "WARNING:root:file test_data/s_00699002_thm.lbl yet exists not repeating\n",
+      "WARNING:root:file test_data/s_00699002_geom.tab yet exists not repeating\n",
+      "WARNING:root:file test_data/s_00699002_geom.lbl yet exists not repeating\n"
+     ]
+    }
+   ],
    "source": [
-    "download_data_fot_sharad_id(sid, \"test_data\")"
+    "download_data_for_sharad_id(sid, \"test_data\")"
    ]
   },
   {
