syncd with planmap repo

--- a/notebooks/DemoDownloadAndConvert.ipynb
+++ b/notebooks/DemoDownloadAndConvert.ipynb
@@ -24,7 +24,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from shapely.geometry import LineString"
+    "from shapely.geometry import LineString\n",
+    "outfolder =  \"/data/SciBigData/radargrams/nicole_thesis/\""
    ]
   },
   {
@@ -33,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sid = \"00699002\""
+    "sids = [\"00563902\", \"02788401\", \"03202402\", \"00520802\", \"03808002\", \"00325703\" ]"
    ]
   },
   {
@@ -45,54 +46,108 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING:root:file test_data/s_00699002_rgram.lbl yet exists not repeating\n",
-      "WARNING:root:file test_data/s_00699002_rgram.img yet exists not repeating\n",
-      "WARNING:root:file test_data/s_00699002_tiff.tif yet exists not repeating\n",
-      "WARNING:root:file test_data/s_00699002_tiff.lbl yet exists not repeating\n",
-      "WARNING:root:file test_data/s_00699002_thm.jpg yet exists not repeating\n",
-      "WARNING:root:file test_data/s_00699002_thm.lbl yet exists not repeating\n",
-      "WARNING:root:file test_data/s_00699002_geom.tab yet exists not repeating\n",
-      "WARNING:root:file test_data/s_00699002_geom.lbl yet exists not repeating\n"
+      "WARNING:root:file /data/SciBigData/radargrams/nicole_thesis/s_00563902_rgram.lbl yet exists not repeating\n",
+      "WARNING:root:file /data/SciBigData/radargrams/nicole_thesis/s_00563902_tiff.tif yet exists not repeating\n",
+      "WARNING:root:file /data/SciBigData/radargrams/nicole_thesis/s_00563902_tiff.lbl yet exists not repeating\n",
+      "WARNING:root:file /data/SciBigData/radargrams/nicole_thesis/s_00563902_thm.jpg yet exists not repeating\n",
+      "WARNING:root:file /data/SciBigData/radargrams/nicole_thesis/s_00563902_thm.lbl yet exists not repeating\n",
+      "WARNING:root:file /data/SciBigData/radargrams/nicole_thesis/s_00563902_geom.tab yet exists not repeating\n",
+      "WARNING:root:file /data/SciBigData/radargrams/nicole_thesis/s_00563902_geom.lbl yet exists not repeating\n",
+      "WARNING:root:file /data/SciBigData/radargrams/nicole_thesis/s_02788401_rgram.lbl yet exists not repeating\n",
+      "WARNING:root:file /data/SciBigData/radargrams/nicole_thesis/s_02788401_tiff.tif yet exists not repeating\n",
+      "WARNING:root:file /data/SciBigData/radargrams/nicole_thesis/s_02788401_tiff.lbl yet exists not repeating\n",
+      "WARNING:root:file /data/SciBigData/radargrams/nicole_thesis/s_02788401_thm.jpg yet exists not repeating\n",
+      "WARNING:root:file /data/SciBigData/radargrams/nicole_thesis/s_02788401_thm.lbl yet exists not repeating\n",
+      "WARNING:root:file /data/SciBigData/radargrams/nicole_thesis/s_02788401_geom.tab yet exists not repeating\n",
+      "WARNING:root:file /data/SciBigData/radargrams/nicole_thesis/s_02788401_geom.lbl yet exists not repeating\n",
+      "WARNING:root:file /data/SciBigData/radargrams/nicole_thesis/s_03202402_rgram.lbl yet exists not repeating\n",
+      "WARNING:root:file /data/SciBigData/radargrams/nicole_thesis/s_03202402_tiff.tif yet exists not repeating\n",
+      "WARNING:root:file /data/SciBigData/radargrams/nicole_thesis/s_03202402_tiff.lbl yet exists not repeating\n",
+      "WARNING:root:file /data/SciBigData/radargrams/nicole_thesis/s_03202402_thm.jpg yet exists not repeating\n",
+      "WARNING:root:file /data/SciBigData/radargrams/nicole_thesis/s_03202402_thm.lbl yet exists not repeating\n",
+      "WARNING:root:file /data/SciBigData/radargrams/nicole_thesis/s_03202402_geom.tab yet exists not repeating\n",
+      "WARNING:root:file /data/SciBigData/radargrams/nicole_thesis/s_03202402_geom.lbl yet exists not repeating\n",
+      "WARNING:root:file /data/SciBigData/radargrams/nicole_thesis/s_00520802_rgram.lbl yet exists not repeating\n",
+      "WARNING:root:file /data/SciBigData/radargrams/nicole_thesis/s_00520802_tiff.tif yet exists not repeating\n",
+      "WARNING:root:file /data/SciBigData/radargrams/nicole_thesis/s_00520802_tiff.lbl yet exists not repeating\n",
+      "WARNING:root:file /data/SciBigData/radargrams/nicole_thesis/s_00520802_thm.jpg yet exists not repeating\n",
+      "WARNING:root:file /data/SciBigData/radargrams/nicole_thesis/s_00520802_thm.lbl yet exists not repeating\n",
+      "WARNING:root:file /data/SciBigData/radargrams/nicole_thesis/s_00520802_geom.tab yet exists not repeating\n",
+      "WARNING:root:file /data/SciBigData/radargrams/nicole_thesis/s_00520802_geom.lbl yet exists not repeating\n",
+      "WARNING:root:file /data/SciBigData/radargrams/nicole_thesis/s_03808002_rgram.lbl yet exists not repeating\n",
+      "WARNING:root:file /data/SciBigData/radargrams/nicole_thesis/s_03808002_tiff.tif yet exists not repeating\n",
+      "WARNING:root:file /data/SciBigData/radargrams/nicole_thesis/s_03808002_tiff.lbl yet exists not repeating\n",
+      "WARNING:root:file /data/SciBigData/radargrams/nicole_thesis/s_03808002_thm.jpg yet exists not repeating\n",
+      "WARNING:root:file /data/SciBigData/radargrams/nicole_thesis/s_03808002_thm.lbl yet exists not repeating\n",
+      "WARNING:root:file /data/SciBigData/radargrams/nicole_thesis/s_03808002_geom.tab yet exists not repeating\n",
+      "WARNING:root:file /data/SciBigData/radargrams/nicole_thesis/s_03808002_geom.lbl yet exists not repeating\n",
+      "WARNING:root:file /data/SciBigData/radargrams/nicole_thesis/s_00325703_rgram.lbl yet exists not repeating\n",
+      "WARNING:root:file /data/SciBigData/radargrams/nicole_thesis/s_00325703_tiff.tif yet exists not repeating\n",
+      "WARNING:root:file /data/SciBigData/radargrams/nicole_thesis/s_00325703_tiff.lbl yet exists not repeating\n",
+      "WARNING:root:file /data/SciBigData/radargrams/nicole_thesis/s_00325703_thm.jpg yet exists not repeating\n",
+      "WARNING:root:file /data/SciBigData/radargrams/nicole_thesis/s_00325703_thm.lbl yet exists not repeating\n",
+      "WARNING:root:file /data/SciBigData/radargrams/nicole_thesis/s_00325703_geom.tab yet exists not repeating\n",
+      "WARNING:root:file /data/SciBigData/radargrams/nicole_thesis/s_00325703_geom.lbl yet exists not repeating\n"
      ]
     }
    ],
    "source": [
-    "download_data_for_sharad_id(sid, \"test_data\")"
+    "download_data_for_sharad_id(sids,outfolder, exclude=[\"RGRAM_IMG\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "lbl = find_sharad_radargrams_in_folder(\"test_data\")[0]\n",
+    "lbls = find_sharad_radargrams_in_folder(outfolder)\n",
+    "log.info(f\"lbls {lbls}\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
-    "tiffname = lbl[0:-8] + \"tiff.tif\"\n",
-    "segyname = lbl[0:-8] + \"segy.sgy\"\n",
-    "geomfname = lbl_to_geom(lbl) \n",
+    "for lbl in  lbls:\n",
     "\n",
-    "tab = read_geom_lbl(geomfname)\n",
-    "gtab = pandas_to_geopandas_points(tab)\n",
+    "    log.info(lbl)\n",
+    "    tiffname = lbl[0:-8] + \"tiff.tif\"\n",
+    "    segyname = lbl[0:-8] + \"segy.sgy\"\n",
+    "    geomfname = lbl_to_geom(lbl) \n",
     "\n",
-    "asnp = gtab.to_crs( north_pole_crs)\n",
+    "    tab = read_geom_lbl(geomfname)\n",
+    "    gtab = pandas_to_geopandas_points(tab)\n",
     "\n",
-    "# mytrack = LineString(asnp.geometry)\n",
-    "startpoint = asnp.geometry.values[0]\n",
-    "endpoint = asnp.geometry.values[-1]\n",
-    "x_start, y_start = np.array(startpoint.xy).T[0]\n",
-    "x_end, y_end = np.array(endpoint.xy).T[0]\n",
+    "    asnp = gtab.to_crs( north_pole_crs)\n",
+    "\n",
+    "    # mytrack = LineString(asnp.geometry)\n",
+    "    startpoint = asnp.geometry.values[0]\n",
+    "    endpoint = asnp.geometry.values[-1]\n",
+    "    x_start, y_start = np.array(startpoint.xy).T[0]\n",
+    "    x_end, y_end = np.array(endpoint.xy).T[0]\n",
     "\n",
     "\n",
-    "# y_o = 173200\n",
-    "# x_o = -122600\n",
+    "    # y_o = 173200\n",
+    "    # x_o = -122600\n",
     "\n",
     "\n",
-    "x_start -= x_start\n",
-    "x_end -= x_start\n",
+    "    x_start -= x_start\n",
+    "    x_end -= x_start\n",
     "\n",
-    "y_start -= y_start\n",
-    "y_end -= y_start"
+    "    y_start -= y_start\n",
+    "    y_end -= y_start\n",
+    "    \n",
+    "    image = plt.imread(tiffname)\n",
+    "    image = image -  np.mean(image)\n",
+    "    image = image * 1000\n",
+    "\n",
+    "    out=assemply_segy(image, x_start, x_end, y_start, y_end, scaler=100, dt=0.01)\n",
+    "    save_segy(out, segyname)"
    ]
   },
   {
@@ -114,7 +169,7 @@
     }
    ],
    "source": [
-    "asnp.to_file(\"test_data/segment\")"
+    "# asnp.to_file(\"test_data/segment\")"
    ]
   },
   {
@@ -122,14 +177,7 @@
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "image = plt.imread(tiffname)\n",
-    "image = image -  np.mean(image)\n",
-    "image = image * 1000\n",
-    "\n",
-    "out=assemply_segy(image, x_start, x_end, y_start, y_end, scaler=100, dt=0.01)\n",
-    "save_segy(out, segyname)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
