--- a/notebooks/Geoms2Package.ipynb
+++ b/notebooks/Geoms2Package.ipynb
@@ -1,13 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# read a set of tracks and put them into a geopackage for future use"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "from sharad import *\n",
+    "from sharpy import *\n",
     "from ipypb import track\n",
     "\n",
     "\n"
@@ -15,26 +22,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['/data/SciBigData/radargrams/Tesi triennale/shape verticali/s_00531001_rgram_lbl/s_00531001_geom.lbl', '/data/SciBigData/radargrams/Tesi triennale/shape verticali/s_00525702_rgram_lbl/s_00525702_geom.lbl', '/data/SciBigData/radargrams/Tesi triennale/shape verticali/s_00668103_rgram_lbl/s_00668103_geom.lbl', '/data/SciBigData/radargrams/Tesi triennale/shape orizzontali/s_00555102_rgram_lbl/s_00555102_geom.lbl', '/data/SciBigData/radargrams/Tesi triennale/shape orizzontali/s_00203001_rgram_lbl/s_00203001_geom.lbl', '/data/SciBigData/radargrams/Tesi triennale/shape orizzontali/s_00329602_rgram_lbl/s_00329602_geom.lbl']\n"
+      "['/data/SciBigData/radargrams/nicole_thesis/s_03202402_geom.lbl', '/data/SciBigData/radargrams/nicole_thesis/s_00520802_geom.lbl', '/data/SciBigData/radargrams/nicole_thesis/s_03808002_geom.lbl', '/data/SciBigData/radargrams/nicole_thesis/s_02788401_geom.lbl', '/data/SciBigData/radargrams/nicole_thesis/s_00325703_geom.lbl', '/data/SciBigData/radargrams/nicole_thesis/s_00563902_geom.lbl']\n"
      ]
     }
    ],
    "source": [
-    "folder = \"/data/SciBigData/radargrams/Tesi triennale/\"    \n",
+    "folder = \"/data/SciBigData/radargrams/nicole_thesis/\"    \n",
     "files = find_sharad_radargrams_in_folder(folder)\n",
     "print (files)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -44,11 +51,11 @@
        "<progress style=\"width:60ex\" max=\"6\" value=\"6\" class=\"Progress-main\"/></progress>\n",
        "<span class=\"Progress-label\"><strong>100%</strong></span>\n",
        "<span class=\"Iteration-label\">6/6</span>\n",
-       "<span class=\"Time-label\">[00:09<00:01, 1.43s/it]</span></div>"
+       "<span class=\"Time-label\">[00:13<00:03, 2.19s/it]</span></div>"
       ],
       "text/plain": [
        "\u001b[A\u001b[2K\r",
-       " [████████████████████████████████████████████████████████████] 6/6 [00:09<00:01, 1.43s/it]"
+       " [████████████████████████████████████████████████████████████] 6/6 [00:13<00:03, 2.19s/it]"
       ]
      },
      "metadata": {},
@@ -62,7 +69,7 @@
     "    t = pandas_to_geopandas_points(t)\n",
     "    lname = match_sharad_id(f)\n",
     "    \n",
-    "    t.to_file(\"package.gpkg\", layer=lname, driver=\"GPKG\")"
+    "    t.to_file(os.path.join(folder , \"package.gpkg\"), layer=lname, driver=\"GPKG\")"
    ]
   },
   {
