some changes and improvements

--- a/notebooks/GenerateAllTracksDB.ipynb
+++ b/notebooks/GenerateAllTracksDB.ipynb
@@ -65,9 +65,7 @@
    "execution_count": 13,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from shapely.geometry import Point, LineString, MultiLineString"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -108,10 +106,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'm' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-9a40b379906c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mm\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'm' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "m"
+   ]
   },
   {
    "cell_type": "code",
@@ -163,6 +175,10 @@
   }
  ],
  "metadata": {
+  "jupytext": {
+   "cell_metadata_filter": "all",
+   "notebook_metadata_filter": "all,-language_info"
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -178,9 +194,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
